# TO-DO-LIST

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml.save  main.py  manager.py  project.py  pyproject.toml  task.py
alembic/: env.py
alembic/versions/: 173ad27e9008_add_projects_and_tasks_tables.py  7d053b2e6c4d_create_projects_and_tasks_tables.py  7f66eb882cb5_add_timestamp_columns.py  aad228452d3b_add_users_table.py
app/api/: main.py
app/api/controllers/: project_controller.py  task_controller.py  user_controller.py
app/api/routers/: projects_router.py  tasks_router.py  user_router.py  users_router.py
app/api/routes/: project_router.py  task_router.py  user_router.py
app/repositories/: project_repository.py  task_repository.py  user_repository.py
app/schemas/project/: project_create.py  project_response.py  project_update.py
app/schemas/task/: task_create.py  task_response.py  task_status_update.py  task_update.py
app/schemas/user/: user_create.py  user_response.py  user_update.py
app/services/: project_service.py  task_service.py  user_service.py
commands/: autoclose_overdue.py
db/: session.py
exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
models/: project.py  task.py  user.py
repositories/: base_repository.py  project_repository.py  task_repository.py
services/: project_service.py  task_service.py  tempCodeRunnerFile.py
