[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "ToDoList – Python OOP (In-Memory) CLI application"
authors = ["Mohaddese Moghaddam <Mohaddesemoghaddam1@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
